# embedded-assistant

./: .gitignore  README.md  pyproject.toml
scripts/: run_llm_server.bat  run_llm_server.sh
src/assistant/: main.py
src/assistant/actions/: gpio.py  system.py
src/assistant/audio/: stt.py  tts.py
src/assistant/brain/: intents.py  llm.py  nlp.py  prompts.py  train_intents.py
src/assistant/core/: logger.py  router.py
src/assistant/datasets/: intents.json
